examples-generated/nat/v1alpha1/gateway.yaml
apiVersion: nat.huaweicloud.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: nat/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: test
  name: test
spec:
  forProvider:
    description: test for terraform
    name: ${var.gateway_name}
    spec: ${var.gateway_specification}
    subnetIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
